--- a/resume.html
+++ b/resume.html
@@ -6,9 +6,9 @@
     <body>
         <nav>
             <ul>
-                    <li><a href="index.html"></a>Home</li>>
-                    <li><a href="resume.html"></a>Resume</li>>
-                    <li><a href="contact.html"></a>Contact</li>>
+                    <li><a href="index.html"></a>Home</li>
+                    <li><a href="resume.html"></a>Resume</li>
+                    <li><a href="contact.html"></a>Contact</li>
             </ul>>
         </nav>
     </body>
