Updated Resume info

--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,34 @@
     <body>
         <nav>
             <ul>
-                    <li><a href="index.html"></a>Home</li>
-                    <li><a href="resume.html"></a>Resume</li>
-                    <li><a href="contact.html"></a>Contact</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        
+
+        <form method="POST" action="https://formspree.io/ailanigc9@gmail.com"></form>
+        <input type="hidden" name="next" value="//ailani9.github.io/thanks.html">
+        <input type="text" name="_gotcha" style="display:none">
+            <div>
+                <label for="name">Name</label></br>
+                <input id="name" type="text" name="name">
+            </div>
+            <div>
+                <label for="email">Email</label></br>
+                <input id="email" type="text" name="_replyto">
+            </div>
+            <div>
+                    <label for="message">Message</label></br>
+                    <textarea id="message" name="message"></textarea>
+            </div>
+            <div>
+                <input type="hidden" name="_subject" value="New Submission!">
+            </div>
+            <div>
+                <input type="submit" value="Send">
+            </div>
+                
     </body>
 </html>
