--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-       <title>Aileen C</title>
+       <title>Hello, I am Aileen</title>
        <meta name="viewport" content="width=device=width, initial-scale=1.0">
        <meta charset="UTF-8">
     </head>
     <body>
-        <nav>
-            <ul>
-                    <li><a href="index.html"></a>Home</li>
-                    <li><a href="resume.html"></a>Resume</li>
-                    <li><a href="contact.html"></a>Contact</li>
-            </ul>
-        </nav>
+            <nav>
+                    <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="resume.html">Resume</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                    </ul>
+            </nav>
+                <h1>Hello, I am Aileen</h1>
+        <img style="border-radius: 50%; height: 50pn; width: 50px; float: right; margin-right: 1em" src="https://www.gravatar.com/avatar/4678a33bf44c38e54a58745033b4d5c6?d=mm&s=64" alt="Ai">
+            <p>G'day Mate!  </br> 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
+                    culpa qui officia deserunt mollit anim id est laborum.
+            </p>
     </body>
 </html>
